--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,6 +2,7 @@
 
 <body>
 
+<%= link_to '<button class="button_in_nav">Add New Movie</button>'.html_safe, new_movie_path %> 
 
 <table class="table table-hover" width="70%" border="5px" bgcolor="#96bb7c" padding="15px">
   <thead>
