--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -3,7 +3,11 @@
 <body>
 
 <%= link_to '<button class="button_in_nav">Add New Movie</button>'.html_safe, new_movie_path %> 
+<%= form_tag search_path, :method => 'get' do %>
 
+  <%= text_field_tag :search, params[:search] ,:class => 'input_search' %>
+  <%= submit_tag "Search" ,:class => 'button_search' ,:autocomplete => "off"%>
+  <% end %>
 <table class="table table-hover" width="70%" border="5px" bgcolor="#96bb7c" padding="15px">
   <thead>
     <tr>
