--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,11 @@
 
 
 <body>
+<% unless current_user %>
+  <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
+<% else %>
+  <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+<% end %>
 
 <%= link_to '<button class="button_in_nav">Add New Movie</button>'.html_safe, new_movie_path %> 
 <%= form_tag search_path, :method => 'get' do %>
