--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -4,6 +4,7 @@
 <br>
 <br>
 <br>
+<%= link_to '<button class="button_in_nav">Review Movie</button>'.html_safe, new_movie_review_path(@movie) %>  
 
 <body>
 <div class="center">
@@ -28,6 +29,7 @@
   <%= @movie.release_date %>
 </p>
 <br>
+
 <div class="center">
 <%= link_to '<button class="button_submit">Edit</button>'.html_safe, edit_movie_path(@movie) %>
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
@@ -39,6 +41,17 @@
 </div>
 </div>
 </div>
+<h1><%= @movie.title %></h1>
+
+<% if @reviews.blank? %>
+<h3> No reviews </h3>
+
+<% else %>
+  <% @reviews.each do |review| %>
+    <p><%= review.rating %></p>
+    <p><%= review.comment %></p>
+  <% end %>
+  <% end %>
 </body>
 
 
