--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,32 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+    
+    
+  <% if current_user %>
+  <div> <%= current_user.name %></div>
+  <% end %>
+  <% unless current_user %>
+  <div class="navbar">
+  <%= link_to '<button class="bookkytomatoes">BOOKKYTOMATOES</button>'.html_safe, movies_path %>
+  <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
+  </div>
+  <% else %>
+  <div class="navbar">
+  <%= link_to '<button class="bookkytomatoes">BOOKKYTOMATOES</button>'.html_safe, movies_path %>
+  &emsp;&emsp;&emsp;&emsp;
+  <%= link_to '<button class="button_in_nav">Add New Movie</button>'.html_safe, new_movie_path %> 
+  
+  <div class="right">
+  <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+  </div>
+  </div>
+    
+  <% end %>
+    </head>
 
   <body>
+  
     <%= yield %>
   </body>
 </html>
