--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,19 +1,23 @@
 
 
 <body>
+<br>
+<br>
 <% unless current_user %>
-  <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
 <% else %>
-  <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-<% end %>
 
-<%= link_to '<button class="button_in_nav">Add New Movie</button>'.html_safe, new_movie_path %> 
-
+<div class="center">
 <%= form_tag search_path, :method => 'get' do %>
 
   <%= text_field_tag :search, params[:search] ,:class => 'input_search' %>
   <%= submit_tag "Search" ,:class => 'button_search' ,:autocomplete => "off"%>
   <% end %>
+  </div>
+  <br>
+  <br>
+<div class="center">
+<div class="box_table">
+<div class="table-wrapper-scroll-y my-custom-scrollbar">
 <table class="table table-hover" width="70%" border="5px" bgcolor="#96bb7c" padding="15px">
   <thead>
     <tr>
@@ -37,8 +41,6 @@
 </div> 
 </div> 
 
-
-
-<br>
+<% end %>
 
 </body>
