--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -30,9 +30,9 @@
   <tbody bgcolor="#f5f1da">
     <% @movies.each do |movie| %>
       <tr>
-      <td padding: 15px ><%= movie.title %></td>
+      <td padding: 15px ><img src="https://image.tmdb.org/t/p/w500/ %>" alt="" height="30%"><%= movie.title %></td>
       <td padding: 15px><%= movie.rating %></td>
-      <td padding: 15px><%= link_to '<button class="button_table">Show</button>'.html_safe, movie %></button></td>
+      <td padding: 15px><%= link_to '<button class="button_table">Show</button>'.html_safe, movie_review_path(@movie)  %></button></td>
       </tr>
     <% end %>
   </tbody>
