--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -32,7 +32,7 @@
       <tr>
       <td padding: 15px ><img src="https://image.tmdb.org/t/p/w500/ %>" alt="" height="30%"><%= movie.title %></td>
       <td padding: 15px><%= movie.rating %></td>
-      <td padding: 15px><%= link_to '<button class="button_table">Show</button>'.html_safe, movie_review_path(@movie)  %></button></td>
+      <td padding: 15px><%= link_to '<button class="button_table">Show</button>'.html_safe, movie %></button></td>
       </tr>
     <% end %>
   </tbody>
