--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,7 +31,7 @@
     background-color: #f5f1da;
     color: #c26565;
     border: 4px solid #c26565;
-    padding: 4px 20px;
+    padding: 2px 8px;
     font-size: 125%;
     border-radius: 12px;
     display: block;
@@ -44,8 +44,9 @@
   
   .navbar {
     overflow: hidden;
-    align-items: left;
-    justify-content: left;
+    
+    align-items: center;
+    justify-content: center;
     background-color: #96bb7c;
   }
   
@@ -89,7 +90,7 @@
   .button_table:hover {background-color: #96bb7c;color: white;}
   
   body{
-    background-color: #c26565;
+    background-color: #f5f1da;
   }
   
   .center {
@@ -129,6 +130,11 @@
   .c_show{
     font-size: 175%;
   }
+
+  .c_review{
+    font-size: 150%;
+    color: #c26565;
+  }
   
   .movie-form {
     display: flex;
@@ -162,7 +168,7 @@
     margin-top:20px;
   }
   
-  
+
   
   .button_submit {
     background-color: #f5f1da ;
@@ -204,7 +210,7 @@
     background-color: #f5f1da ;
     color: #c26565;
     border: 4px solid #c26565;
-    padding: 4px 20px;
+    padding: 2px 8px;
     border-radius: 12px;
     font-family: monaco,Consolas,Lucida Console,monospace; 
     font-size: 125%;
@@ -236,6 +242,19 @@
   
   .button_sign_in:hover {background-color: #96bb7c ;color: white;}
   
+  .button_log_out {
+    background-color: #f5f1da ;
+    color: #c26565;
+    border: 4px solid #c26565 ;
+    padding: 3px 3px;
+    border-radius: 12px;
+    font-family: monaco,Consolas,Lucida Console,monospace; 
+    font-size: 100%;
+    
+  }
+  
+  .button_log_out:hover {background-color: #c26565 ;color: white;}
+
   .button_log_in {
     background-color: #f5f1da ;
     color: #eebb4d;
@@ -244,6 +263,7 @@
     border-radius: 12px;
     font-family: monaco,Consolas,Lucida Console,monospace; 
     font-size: 100%;
+    
   }
   
   .button_log_in:hover {background-color: #eebb4d ;color: white;}
@@ -282,6 +302,30 @@
   }
   
   table{
+    color: #c26565;
     font-family: Cambria,Georgia,serif; 
     font-size: 125%;
   }
+
+  #movieInfo {
+    padding: 2ex;
+    position: absolute;
+    border: 2px double grey;
+    background: wheat;
+  }
+
+  #topnav ul{
+    list-style-type: none;
+    margin: 0;
+    margin-left: auto;
+    background-color: rgb(0,93,164);
+    padding: 1.5%;
+    display:inline-block;
+    width: 100%;
+}
+
+.email_user{
+  color: #c26565;
+  font-size: 125%;
+  font-family: monaco,Consolas,Lucida Console,monospace; 
+}
