--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -7,12 +7,16 @@
 <% else %>
 <div class="row">
   <div class="col-sm">
+  
+
   <% if current_user %>
     <div class="email_user">
-    <%= current_user.email %>
+    <%= current_user.name %>
     </div>
   <% end %>
+  
   <%= link_to '<button class="button_log_out">Log out</button>'.html_safe, destroy_user_session_path, method: :delete %>
+  
   </div>
   <div class="col-sm">
   <div class="center">
@@ -48,19 +52,21 @@
     <th >ID</th>
     <th >Title</th>
     <th >Rating</th>
+    <th >Release date</th>
     <th >Review</th>
     <th >More info</th>
     </tr>
   </thead>
 
   <tbody bgcolor="#f5f1da">
-    <% @movies.each do |movie| %>
+    <% @movies.each.with_index(1) do |movie,index| %>
       <tr>
-      <td ><%= movie.id %></td>
-      <td ><img src="https://image.tmdb.org/t/p/w500/ %>" alt="" height="30%"><%= movie.title %></td>
+      <td ><%= index %></td>
+      <td ><%= movie.title %></td>
       <td ><%= movie.rating %></td>
-      <td ><%= link_to "Review #{movie.title}", movie_path(movie) %></button></td>
-      <td padding: 15px><%= link_to "More info #{movie.title}", movie_path(movie) %></button></td>
+      <td ><%= movie.release_date %></td>
+      <td ><%= link_to "Review", movie_path(movie) %></td>
+      <td padding: 15px><%= link_to "More info #{movie.title}", movie_path(movie) %></td>
 
       </tr>
     <% end %>
