--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -15,12 +15,12 @@
     <%= f.text_area :description, cols: "30" , rows: "4"%>
     <br>
     <%= f.label :release_date %>
-    <%= f.date_field :release_date ,min: "1930-12-31" ,max: "2020-10-20" %>
+    <%= f.date_field :release_date ,min: "1930-12-31" ,max: "2006-12-31" %>
     <br>
     <br>
     <div>
-    <%= f.submit :SUBMIT ,class: "button_submit"%>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-    <%= link_to '<button class="button_back">CANCEL</button>'.html_safe, movies_path(@movie) %>
+    <%= f.submit :Edit ,class: "button_submit"%>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+    <%= link_to '<button class="button_back">Cancel</button>'.html_safe, movies_path(@movie) %>
     </div>
     <br>
     <br>
