--- a/app/views/movie_from_tmdb/edit.html.erb
+++ b/app/views/movie_from_tmdb/edit.html.erb
@@ -1,32 +1,32 @@
-<br />
-<br />
-<br />
-<br />
-<H1><font color="blue">!Add Movie To MyRottenPotatoes From TheMovieDb!</font></H1>
-<br />
-<H5>
-  <%= form_for :movie_test ,url: searching_path(@movie_test),method: :patch do |f| %>
-    <B>
-      <p>
-        <%= f.label :Movie_Title %><br>
-        <%= f.text_field :Movie_Title %>
-      </p>
-      <p>
-        <%= f.label :Rating %><br>
-        <%= f.text_field :Rating %>
-      </p>
-      <p>
-        <%= f.label :Release_Date %><br>
-        <%= f.text_field :Release_Date %>
-      </p>
-      <p>
-        <%= f.label :More_Info %><br>
-        <%= f.text_field :More_Info %>
-      </p>
-      <p>
-        <%= f.submit("Save to Rotten" ,{:class =>"btn btn-primary"}) %>
-      </p>
-    </B>
-  <% end %>
-  <%= button_to "Cancel", home_path, :method => "get" ,:class => 'btn btn-danger'%>
-</H5>
+
+
+  <div class="center">
+
+<%= form_for @movie_test,html: {class: "movie-form"} do |f| %>
+    <h1>Add movie from TMDB</h1>
+    <br>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+    <br>
+    
+    <%= f.label :rating %>
+    <%= f.number_field :rating, in: 1.0..10.0, step: 0.1 , placeholder: "1-10" %>
+
+    <br>
+    <%= f.label :description %>
+    <%= f.text_area :description, cols: "30" , rows: "4"%>
+    <br>
+    <%= f.label :release_date %>
+    <%= f.date_field :release_date ,min: "1930-12-31" ,max: "2020-10-20" %>
+    <br>
+    <br>
+    <div>
+    <%= f.submit :SUBMIT ,class: "button_submit"%>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+    <%= link_to '<button class="button_back">CANCEL</button>'.html_safe, movies_path(@movie) %>
+    </div>
+    <br>
+    <br>
+    
+    
+<% end %>
+</div>
