--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -22,7 +22,7 @@
   <div class="center">
   <br>
   <br>
-<%= link_to '<button class="button_in_nav">Add New Movie</button>'.html_safe, new_movie_path %> 
+  <!--<%= link_to '<button class="button_in_nav">Add New Movie</button>'.html_safe, new_movie_path %> -->
 
 </div>
   </div>
