--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -11,7 +11,7 @@
 
   <% if current_user %>
     <div class="email_user">
-    <%= current_user.name %>
+    <%= current_user.email %>
     </div>
   <% end %>
   
