edit review path

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -37,7 +37,7 @@ style="width: 70%; color: black; background-color: #f5f1da; padding: 50px 20px; 
   <div class="row">
   <div class="col-sm">
   <div class="center">
-  <%= link_to  '<button class="button_in_nav">Edit movie</button>'.html_safe, edit_movie_path(@review) %>  &emsp;&emsp;
+  <%= link_to  '<button class="button_in_nav">Edit movie</button>'.html_safe, edit_movie_path(@movie.review) %>  &emsp;&emsp;
 
   </div>
   </div>
