edit,delete review

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -24,9 +24,10 @@ style="width: 70%; color: black; background-color: #f5f1da; padding: 50px 20px; 
     <strong><p class="c_review"><%= review.user.email %></p></strong>
     </div>
     <p class="c_review"><%= review.comment %></p>
+    <p class="c_review"><%= review.id %></p>
     <!--<%= link_to '<button class="button_review">Edit</button>'.html_safe, edit_movie_review_path(@movie.user) %>-->
-    <%= link_to  'Edit', edit_movie_review_path(@movie) %>&emsp;&emsp;
-    <%= link_to  'Delete', movie_review_path(review), :method => :delete %>  
+    <%= link_to  'Edit', edit_movie_review_path(@movie,review) %>&emsp;&emsp;
+    <%= link_to  'Delete', movie_review_path(@movie,review), :method => :delete %>  
     <hr>
   <% end %>
   <% end %>
@@ -37,7 +38,7 @@ style="width: 70%; color: black; background-color: #f5f1da; padding: 50px 20px; 
   <div class="row">
   <div class="col-sm">
   <div class="center">
-  <%= link_to  '<button class="button_in_nav">Edit movie</button>'.html_safe, edit_movie_path(@movie.review) %>  &emsp;&emsp;
+  <%= link_to  '<button class="button_in_nav">Edit movie</button>'.html_safe, edit_movie_path(@movie,@review) %>  &emsp;&emsp;
 
   </div>
   </div>
