--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -20,7 +20,7 @@
     <br>
     <div>
     <%= f.submit :Edit ,class: "button_submit"%>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-    <%= link_to '<button class="button_back">Cancel</button>'.html_safe, movies_path(@movie) %>
+    <%= link_to '<button class="button_back">Cancel</button>'.html_safe, movie_path(@movie) %>
     </div>
     <br>
     <br>
