--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -17,6 +17,6 @@
     <div>
     <%= form.submit :ADD ,class: "button_submit"%>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 <% end %>
-<%= link_to '<button class="button_back">Cancle</button>'.html_safe, movies_path(@movie) %>
+<%= link_to '<button class="button_back">Cancle</button>'.html_safe, movie_path(@movie) %>
 </div>
 </div>
