--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -15,6 +15,6 @@
     <div>
     <%= form.submit :Edit ,class: "button_submit"%>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 <% end %>
-<%= link_to '<button class="button_back">Cancle</button>'.html_safe, movies_path %>
+<%= link_to '<button class="button_back">Cancle</button>'.html_safe, movie_path(@movie) %>
 </div>
 </div>
