--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,6 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     
-    
   
  
   <div class="navbar">
@@ -25,5 +24,6 @@
   <body>
   
     <%= yield %>
+    <%= javascript_pack_tag 'custom' %>
   </body>
 </html>
