button back to root

--- a/app/views/movie_from_tmdb/index.html.erb
+++ b/app/views/movie_from_tmdb/index.html.erb
@@ -1,7 +1,8 @@
 
 <H1><center><font color="#96bb7c"><B>Search Movie from TheMovieDb</B></font></center></H1>
-
-
+<div class="center"><%= link_to  '<button class="button_in_nav">Back to bookkytomatoes</button>'.html_safe, movies_path %>
+</div>
+ 
   <div class="center">
 <div class="box_table">
 <div class="table-wrapper-scroll-y my-custom-scrollbar">
