--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -46,15 +46,16 @@
 <div class="center">
 <div class="box_table">
 <div class="table-wrapper-scroll-y my-custom-scrollbar">
-<table class="table table-hover" width="70%" border="5px" bgcolor="#96bb7c" padding="15px">
-  <thead>
+<table id="movies" class="table table-hover" width="100%" border="5px" bgcolor="#96bb7c" padding="15px"> 
+ 
+<thead>
     <tr>
-    <th >ID</th>
+    <th >Row</th>
     <th >Title</th>
     <th >Rating</th>
     <th >Release date</th>
     <th >Review</th>
-    <th >More info</th>
+    <!--<th >More info</th>-->
     </tr>
   </thead>
 
@@ -66,7 +67,8 @@
       <td ><%= movie.rating %></td>
       <td ><%= movie.release_date %></td>
       <td ><%= link_to "Review", movie_path(movie) %></td>
-      <td padding: 15px><%= link_to "More info #{movie.title}", movie_path(movie) %></td>
+      <!--<td padding: 15px ><%= link_to "More info #{movie.title}", movie_path(movie) %></td>-->
+      <!--<%= link_to "Section", root_path, :class => "my-class", :id => "my-id" %>-->
 
       </tr>
     <% end %>
