--- a/app/views/movie_from_tmdb/index.html.erb
+++ b/app/views/movie_from_tmdb/index.html.erb
@@ -6,7 +6,7 @@
   <div class="center">
 <div class="box_table">
 <div class="table-wrapper-scroll-y my-custom-scrollbar">
-<table class="table table-hover" width="70%" border="5px" bgcolor="#96bb7c" padding="15px">
+<table id="movies" class="table table-hover" width="70%" border="5px" bgcolor="#96bb7c" padding="15px">
   <thead>
     <tr>
     <th>Row</th>
